--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,6 +13,7 @@
         android:text="REGISTER"
         android:textSize="40dp"/>
     <EditText
+        android:id="@+id/names"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
@@ -21,6 +22,7 @@
         android:hint="full name"
         android:textAlignment="center"/>
     <EditText
+        android:id="@+id/mail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="250dp"
@@ -31,6 +33,7 @@
         android:inputType="text"/>
 
     <EditText
+        android:id="@+id/pass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="300dp"
@@ -40,6 +43,7 @@
         android:textAlignment="center"
         android:inputType="textPassword"/>
     <EditText
+        android:id="@+id/rptpass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="350dp"
@@ -50,12 +54,13 @@
         android:inputType="textPassword"/>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/registerr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="420dp"
         android:layout_marginLeft="135dp"
         android:text="Register"
-        android:textSize="25dp"/>
+        android:textSize="25dp"
+        android:onClick="regist"/>
 
 </RelativeLayout>
