--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -4,50 +4,61 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".menu">
+
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="105dp"
+        android:layout_width="400dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="5.6dp"
+        android:background="#fff"
+        android:drawableLeft="@drawable/acciden"
+        android:onClick="report"
         android:text="REPORT ACCIDENT"
-        android:textSize="20dp"
-        android:onClick="report"/>
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:layout_marginLeft="95dp"
+        android:layout_width="400dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="130sp"
+        android:layout_marginLeft="5.6dp"
+        android:background="#fff"
+        android:drawableLeft="@drawable/ambulance"
+        android:onClick="call"
         android:text="CALL AN AMBULANCE"
         android:textAlignment="center"
-        android:textSize="20dp"
-        android:onClick="ambulance"/>
+        android:textSize="20dp" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="300dp"
-        android:layout_marginLeft="105dp"
-        android:text="CALL THE POLICE"
-        android:textSize="20dp"
-        android:textAlignment="center"
+        android:layout_width="400dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="260dp"
+        android:layout_marginLeft="5.6dp"
         android:onClick="police"
-        />
+        android:text="CALL THE POLICE"
+        android:background="#fff"
+        android:drawableLeft="@drawable/police"
+        android:textAlignment="center"
+        android:textSize="20dp" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="400dp"
-        android:layout_marginLeft="105dp"
-        android:text="APPLY FOR INSURANCE"
-        android:textSize="20dp"
-        android:onClick="policy"/>
+        android:layout_width="400dp"
+        android:layout_marginLeft="5.6dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="390dp"
+        android:drawableLeft="@drawable/policy"
+        android:background="#fff"
+        android:onClick="policy"
+        android:text="APPLY INSURANCE"
+        android:textSize="20dp" />
+
+
 
 
 </RelativeLayout>
