--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,7 +17,7 @@
         android:paddingTop="5dp"
         android:text="TERMS AND CONDITIONS"
         android:fontFamily="sans-serif"
-        android:textColor="#fff"
+        android:textColor="#000"
         android:textStyle="bold"
         android:textAlignment="center"
         android:textSize="30dp"
@@ -37,7 +37,7 @@ It’s up to you to set the rules and guidelines that the user must agree to. Yo
 
 "
         android:textAlignment="center"
-        android:textColor="#fff"
+        android:textColor="#000"
         android:textSize="18dp" />
 
     <Button
