--- a/app/src/main/res/layout/activity_report2.xml
+++ b/app/src/main/res/layout/activity_report2.xml
@@ -11,9 +11,10 @@
         android:id="@+id/date1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Date of Accident"
+        android:text="@string/date_of_accident"
         android:layout_marginTop="19sp"
-        android:layout_marginLeft="25sp"/>
+        android:layout_marginLeft="25sp"
+        android:layout_marginStart="25sp" />
 
     <EditText
         android:id="@+id/date"
